<resources>
    <string name="app_name">Simple Shopping List 3</string>
    <string name="add_shop_item_content_description">Add a new product</string>
    <string name="name_hint">Product name:</string>
    <string name="count_hint">Product count:</string>
    <string name="save_btn">Save</string>
    <string name="error_input_name">Invalid name</string>
    <string name="error_input_count">Invalid count</string>
    <string name="success">Successfully added</string>
    <string name="exit_message">Click again to exit</string>
    <string name="custom_dialog_delimiter">______________________________________________</string>
    <string name="custom_dialog_text_hello">Hello!</string>
    <string name="custom_dialog_text_welcome">Welcome to the shopping list!</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="all_item_enable">Make all products active?</string>
    <string name="all_item_disable">Make all products inactive?</string>
    <string name="all_item_delete">Delete all products?</string>
    <string name="menu_title_enable_all_items">Enable all products</string>
    <string name="menu_title_disable_all_items">Disable all products</string>
    <string name="menu_title_delete_all_items">Delete all products</string>
    <string name="send_items_list">Send items list</string>
</resources>